[Tf 44 46 51 56] - Add auto-complete dropdown (#23)
* 1. add script to convert csv to json; 2. add searchable dropdown component

* update convertion script

* add utility scripts

* 1. update city, major, degree and university list; 2. add auto complete list

* update the utility-scripts folder structure

* 1. refactor data for dropdown; 2. add the converter scripts

--- a/webapp/src/features/SmartResume/styles/index.css
+++ b/webapp/src/features/SmartResume/styles/index.css
@@ -33,6 +33,7 @@
 .form_item label{
   color: #bfc4d3;
 }
+.form_item .rbt-input-main,
 .form_item input{
   background-color: #f2f4f9;
   color: #d5d9e6;
