--- a/webapp/src/features/SmartResume/styles/index.scss
+++ b/webapp/src/features/SmartResume/styles/index.scss
@@ -14,26 +14,32 @@
   .form_h1 {
     text-align: left;
     margin: 40px 0;
-
-    h1 {
-      font-size: 30px;
-      line-height: 1;
-      color: #333333;
+    div{
+      display:flex;
+      align-items: center;
+      h1 {
+        font-size: 30px;
+        line-height: 1;
+        color: #333333;
+        margin-left:10px;
+        // icon has top margin, so we need manually adjust this 
+        margin-top: 5px;
+      }
     }
-
+    
     p {
       font-size: 14px;
       line-height: 2.14;
       color: #bfc4d3;
     }
   }
-
   .form_h2 {
     font-size: 20px;
     font-weight: bold;
     color: #333333;
+    margin-bottom:10px;
   }
-
+  
   .form_body {
     width: 800px;
     border-radius: 8px;
@@ -48,12 +54,11 @@
 
     .rbt-input-main, input {
       background-color: #f2f4f9;
-      color: #d5d9e6;
+      color: #333333;
       border-radius: 8px;
       border: none;
-      /* box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.1); */
+      box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.1);
     }
-
     .DateInput_input {
       height: 38px;
       font-size: 16px;
@@ -63,6 +68,14 @@
         color: black;
       }
     }
+  }
+  .form_item .rbt-input-main,
+  .form_item input {
+    background-color: #f2f4f9;
+    color: #d5d9e6;
+    border-radius: 8px;
+    border: none;
+    color: #333;
   }
 
   .space_betweens {
@@ -74,6 +87,11 @@
     font-size: 16px;
     font-weight: bold;
     color: #d5d9e6;
+  }
+
+  .w-100{
+    width: 100%;
+    border-radius: 30px;
   }
 
 
@@ -95,4 +113,31 @@
       padding-left: 10px;
     }
   }
+}
+
+// input placeholder text color 
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: #d5d9e6 !important;
+}
+::-moz-placeholder { /* Firefox 19+ */
+  color: #d5d9e6 !important;
+}
+:-ms-input-placeholder { /* IE 10+ */
+  color: #d5d9e6 !important;
+}
+:-moz-placeholder { /* Firefox 18- */
+  color: #d5d9e6 !important;
+}
+
+// overwrite some date picker style 
+.CalendarDay__selected, 
+.CalendarDay__selected:active, 
+.CalendarDay__selected:hover{
+  background:#3e89ec!important;
+  border-color:#3e89ec!important;
+}
+
+.DayPickerKeyboardShortcuts_show__bottomRight::before{
+  border-top: 26px solid transparent!important;
+  border-right: 33px solid #3e89ec!important;
 }
