Tf 42 加入 工作经历 项目经历 志愿者经历3个section (#48)
* 1. update UI; 2. add translated strings

* add a test snapshot

* remove unneeded file

* update snapshot, remove unused file

* correct an i18n string

* correct an i18n string

* add image upload modal + image editing feature

* add basic form save handler and validation

* add images + icons

* code refactor

* Code cleanup based on code review

* 1. add 404 gif; 2. update city list; 3. update education form with city as dropdown

* add 404 page

* update converter script

* code cleanup; still working in progress with testing

* many tiny UI update; also update unit test

* 1. code refactor to move isValid to slicers/common.js; 2. some code cleanup

* fix education/basic unit test

* add work experience; add radio button group

* add 3 other forms

* 1. refactor textarea component; 2. refactor radio component

Co-authored-by: Oscar Zhang <zsyoscar@gamil.com>

--- a/webapp/src/features/SmartResume/styles/index.scss
+++ b/webapp/src/features/SmartResume/styles/index.scss
@@ -52,6 +52,7 @@
       color: #bfc4d3;
     }
 
+    textarea,
     .rbt-input-main, input {
       background-color: #f2f4f9;
       color: #333333;
@@ -68,6 +69,36 @@
         color: black;
       }
     }
+
+    .radioButton_container{
+      display:flex;
+      justify-content: space-around;
+      .radioButton{
+        width: 38px;
+        height: 38px;
+        border-radius: 21px;
+        border: none;
+        background:white;
+        color: #bfc4d3;
+        &.selected{
+          color: white;
+          background-color: #3e89ec;
+        }
+        &:focus{
+          border:none;
+          outline:none;
+        }
+      }
+    }
+
+
+  }
+  .form-group textarea{
+    background-color: #f2f4f9;
+    color: #d5d9e6;
+    border-radius: 8px;
+    border: none;
+    color: #333;
   }
   .form_item .rbt-input-main,
   .form_item input {
@@ -92,6 +123,16 @@
   .w-100{
     width: 100%;
     border-radius: 30px;
+  }
+
+  .SingleDatePicker{
+    display:block;
+    .SingleDatePickerInput{
+      width:100%;
+      .DateInput{
+        width:100%;
+      }
+    }
   }
 
 
