--- a/webapp/src/features/SmartResume/styles/index.scss
+++ b/webapp/src/features/SmartResume/styles/index.scss
@@ -141,6 +141,7 @@
     display: flex;
     padding: 20px;
     color: #3e89ec;
+    cursor:pointer;
 
     /* if svg is provided, we don't need this  */
     span {
