TF-32: Written Assisstant (#59)
* feat - add in assistant - add in basic trigger flow

* feat - written assistant - add in animation and everything

* feat - add to other forms

* fix: div overlapping and css z-index

Co-authored-by: Melody X <melodypxin@gmail.com>

--- a/webapp/src/features/SmartResume/styles/ResumePreview.module.css
+++ b/webapp/src/features/SmartResume/styles/ResumePreview.module.css
@@ -6,6 +6,7 @@
   overflow-y: auto;
   background: #f0f0f0;
   position: relative;
+  z-index: -1;
 }
 
 /* Hide Scrollbars But Keep Functionality */
