--- a/webapp/src/features/SmartResume/styles/index.scss
+++ b/webapp/src/features/SmartResume/styles/index.scss
@@ -14,32 +14,35 @@
   .form_h1 {
     text-align: left;
     margin: 40px 0;
-    div{
-      display:flex;
+
+    div {
+      display: flex;
       align-items: center;
+
       h1 {
         font-size: 30px;
         line-height: 1;
         color: #333333;
-        margin-left:10px;
+        margin-left: 10px;
         // icon has top margin, so we need manually adjust this 
         margin-top: 5px;
       }
     }
-    
+
     p {
       font-size: 14px;
       line-height: 2.14;
       color: #bfc4d3;
     }
   }
+
   .form_h2 {
     font-size: 20px;
     font-weight: bold;
     color: #333333;
-    margin-bottom:10px;
+    margin-bottom: 10px;
   }
-  
+
   .form_body {
     width: 800px;
     border-radius: 8px;
@@ -52,14 +55,16 @@
       color: #bfc4d3;
     }
 
+    .rbt-input-main,
     textarea,
-    .rbt-input-main, input {
+    input {
       background-color: #f2f4f9;
       color: #333333;
       border-radius: 8px;
       border: none;
       box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.1);
     }
+
     .DateInput_input {
       height: 38px;
       font-size: 16px;
@@ -70,36 +75,41 @@
       }
     }
 
-    .radioButton_container{
-      display:flex;
+    .radioButton_container {
+      display: flex;
       justify-content: space-around;
-      .radioButton{
+
+      .radioButton {
         width: 38px;
         height: 38px;
         border-radius: 21px;
         border: none;
-        background:white;
+        background: white;
         color: #bfc4d3;
-        &.selected{
+
+        &.selected {
           color: white;
           background-color: #3e89ec;
         }
-        &:focus{
-          border:none;
-          outline:none;
+
+        &:focus {
+          border: none;
+          outline: none;
         }
       }
     }
 
 
   }
-  .form-group textarea{
+
+  .form-group textarea {
     background-color: #f2f4f9;
     color: #d5d9e6;
     border-radius: 8px;
     border: none;
     color: #333;
   }
+
   .form_item .rbt-input-main,
   .form_item input {
     background-color: #f2f4f9;
@@ -120,17 +130,19 @@
     color: #d5d9e6;
   }
 
-  .w-100{
+  .w-100 {
     width: 100%;
     border-radius: 30px;
   }
 
-  .SingleDatePicker{
-    display:block;
-    .SingleDatePickerInput{
-      width:100%;
-      .DateInput{
-        width:100%;
+  .SingleDatePicker {
+    display: block;
+
+    .SingleDatePickerInput {
+      width: 100%;
+
+      .DateInput {
+        width: 100%;
       }
     }
   }
@@ -155,31 +167,71 @@
       padding-left: 10px;
     }
   }
-}
 
-// input placeholder text color 
-::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-  color: #d5d9e6 !important;
-}
-::-moz-placeholder { /* Firefox 19+ */
-  color: #d5d9e6 !important;
-}
-:-ms-input-placeholder { /* IE 10+ */
-  color: #d5d9e6 !important;
-}
-:-moz-placeholder { /* Firefox 18- */
-  color: #d5d9e6 !important;
-}
+  .writeAssistantContainer {
+    position: relative;
 
-// overwrite some date picker style 
-.CalendarDay__selected, 
-.CalendarDay__selected:active, 
-.CalendarDay__selected:hover{
-  background:#3e89ec!important;
-  border-color:#3e89ec!important;
-}
+    .writeAssistant {
+      position: absolute;
+      top: 0;
+      right: 0;
+      cursor: pointer;
 
-.DayPickerKeyboardShortcuts_show__bottomRight::before{
-  border-top: 26px solid transparent!important;
-  border-right: 33px solid #3e89ec!important;
+      .hand {
+        fill: #bfc4d3;
+      }
+
+      .btn.btn-link {
+        padding-left: 10px;
+        font-size: 14px;
+        font-weight: bold;
+        color: #bfc4d3;
+      }
+    }
+
+    &.active, &:hover {
+      .hand {
+        fill: #3e89ec;
+      }
+
+      .btn.btn-link {
+        text-decoration: none;
+        color: #3e89ec;
+      }
+    }
+  }
+
+  // input placeholder text color 
+  ::-webkit-input-placeholder {
+    /* Chrome/Opera/Safari */
+    color: #d5d9e6 !important;
+  }
+
+  ::-moz-placeholder {
+    /* Firefox 19+ */
+    color: #d5d9e6 !important;
+  }
+
+  :-ms-input-placeholder {
+    /* IE 10+ */
+    color: #d5d9e6 !important;
+  }
+
+  :-moz-placeholder {
+    /* Firefox 18- */
+    color: #d5d9e6 !important;
+  }
+
+  // overwrite some date picker style 
+  .CalendarDay__selected,
+  .CalendarDay__selected:active,
+  .CalendarDay__selected:hover {
+    background: #3e89ec !important;
+    border-color: #3e89ec !important;
+  }
+
+  .DayPickerKeyboardShortcuts_show__bottomRight::before {
+    border-top: 26px solid transparent !important;
+    border-right: 33px solid #3e89ec !important;
+  }
 }
