TF-77 [App-我的简历] 主页的Design and Impl (#67)
* feat - update navigation

* chore: update snapshot

* feat - add in first impression

Co-authored-by: xelody <melodypxin@gmail.com>

--- a/webapp/src/index.css
+++ b/webapp/src/index.css
@@ -1,4 +1,11 @@
+html {
+  width: 100%;
+  height: 100%;
+}
+
 body {
+  width: 100%;
+  height: 100%;
   margin: 0;
   font-family: 'MicrosoftYaHei', 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -12,6 +19,7 @@ code {
     monospace;
 }
 
-.features {
-  padding-top: 56px;
+#root {
+  width: 100%;
+  height: 100%;
 }
