--- a/onboarding-app/src/main/resources/templates/pages/login.html
+++ b/onboarding-app/src/main/resources/templates/pages/login.html
@@ -6,34 +6,52 @@
       with:includeScripts="true"
 >
 <th:block layout:fragment="content">
-  <div>
-    <h1>Welcome to Kuaidaoresume login page</h1>
-    <form th:action="@{/login}" class="login-form" th:method="post">
+  <div class="content-body">
+    <p class="title">
+      登入
+    </p>
+    <form th:action="@{/login}" th:method="post">
       <div class="warning-message" th:if="${page.denied}">
-        Sorry, no account was found with that email and password. If you forgot your password,
-        <a th:href="@{/password-reset}" href="reset.html">click here to reset it</a>.
+        <p>对不起，账户或者密码不对.</p>
+        <p>如果您忘记了密码，请<a th:href="@{/password-reset}" href="reset.html">点击这里</a>重置密码.</p>
       </div>
       <input type='hidden' name='return_to' th:value='${page.returnTo}'/>
-      <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label login-field">
-        <input class="mdl-textfield__input" type="text" id="login-email" name="email" th:value="${page.previousEmail}">
-        <label class="mdl-textfield__label" for="login-email">Email</label>
-      </div>
-      <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label login-field">
-        <input class="mdl-textfield__input" type="password" name="password" id="login-password">
-        <label class="mdl-textfield__label" for="login-password">Password</label>
-      </div>
-      <div class="remember-me-area login-field" for="remember-me-checkbox">
-        <input type="checkbox" id="remember-me-checkbox" class="mdl-checkbox__input" name="remember-me">
-        <span class="">Remember me</span>
-        <div class="password-reset">
-          <a th:href="@{/password-reset}" href="reset.html">Reset Password</a>
+      <div class="form-content">
+        <div class="form-group">
+          <label for="login-email">邮箱</label>
+          <input
+            name="email"
+            type="email"
+            class="form-control"
+            id="login-email"
+            aria-describedby="emailHelp"
+            placeholder="请输入您的账户邮箱"
+            th:value="${page.previousEmail}"
+            autofocus
+          />
+        </div>
+        <div class="form-group">
+          <label for="login-password">密码</label>
+          <input
+            name="password"
+            type="password"
+            class="form-control"
+            id="login-password"
+            placeholder="请输入您的登入密码"
+          />
         </div>
       </div>
-      <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">
-        Login
-      </button>
+      <div class="button-group">
+        <button type="submit" class="btn btn-primary float-left">
+          登入
+        </button>
+        <button type="submit" class="btn btn-success float-right">
+          <img th:src="@{img/wechat_white.svg}" alt="WeChat logo" />
+          微信登入
+        </button>
+      </div>
     </form>
-    <p>Don't have an account? <a th:href="@{/sign-up}" href="signup.html">Create an Account</a></p>
+    <p class="label">我还没有账号 <a th:href="@{/sign-up}" href="signup.html">点击注册</a></p>
   </div>
 </th:block>
 </html>
