--- a/onboarding-app/src/main/resources/templates/pages/signup.html
+++ b/onboarding-app/src/main/resources/templates/pages/signup.html
@@ -6,27 +6,34 @@
       with:includeScripts="true"
 >
 <th:block layout:fragment="content">
-  <div class="mdl-grid">
-    <div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-phone">
-      <div class="back-button">
-        <a class="button button--outline" th:href="@{/}" href="/"><i class="fa fa-arrow-left" aria-hidden="true"></i>Go Back</a>
+  <div class="content-body">
+    <p class="title">
+      账号注册
+    </p>
+    <form id="v2-signup-form" name="v2-signup-form" th:action="@{/confirm}" th:method="post">
+      <div class="form-content">
+        <div class="form-group">
+          <label for="sign-up-form-main">邮箱</label>
+          <input
+            name="email"
+            type="email"
+            class="form-control"
+            id="sign-up-form-main"
+            aria-describedby="emailHelp"
+            placeholder="请输入您的账户邮箱"
+            autofocus
+          />
+        </div>
       </div>
-    </div>
-    <div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-phone mdl-cell--1-offset-tablet">
-      <div class="main-area">
-
-        <h1>Create an online resume and we will match with your dream career path.</h1>
-        <form class="sign-up-form" id="v2-signup-form" name="v2-signup-form" th:action="@{/confirm}" th:method="post">
-          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label sign-up-area">
-            <input class="mdl-textfield__input" name="email" type="text" id="sign-up-form-main" autofocus>
-            <label class="mdl-textfield__label" for="sign-up-form-main">Email</label>
-          </div>
-          <input type="submit" name="subscribe" value="Sign Up For Free" id="v2-signup" />
-        </form>
-        <p>Already have an account? <a th:href="@{/login}" href="login.html">Login Here</a></p>
-        <p>By clicking 'Sign Up'</p>
+      <div class="button-group">
+        <a th:href="@{/login}" href="login.html"  class="btn btn-light float-left" tabindex="-1" role="button" aria-disabled="true">
+          返回
+        </a>
+        <button type="submit" name="subscribe" class="btn btn-success float-right">
+          注册邮箱
+        </button>
       </div>
-    </div>
+    </form>
   </div>
 </th:block>
 </html>
