TF-00000 Download cleanup (#82)
* add preview component

* add preview content dynamic genrator

* Did some refactor of code structor

* refactor work experience

* update a current position logic

* Add control buttons group; add page broker (50%)

* add page break feature

* WIP: add react-pdf library

* some code cleanup

* add adjust to whole page feature

* Add some print css

* fix some eslint error

* fix 2 broken unit test

* Complete download PDF logic; code refactor; fix some merge conflict

* some cleanup

* fix a failed test

* cleanup some image

* remove some test data

--- a/webapp/src/features/SmartResume/styles/LeftNav.module.css
+++ b/webapp/src/features/SmartResume/styles/LeftNav.module.css
@@ -30,3 +30,9 @@
   border-top-left-radius: 30px;
   border-bottom-left-radius: 30px;
 }
+
+@media print {
+  .container{
+    display:none;
+  }
+}
