Tf 78 - 简历编写小帖士 (#83)
* add preview component

* add preview content dynamic genrator

* Did some refactor of code structor

* refactor work experience

* update a current position logic

* Add control buttons group; add page broker (50%)

* add page break feature

* WIP: add react-pdf library

* some code cleanup

* add adjust to whole page feature

* Add some print css

* fix some eslint error

* fix 2 broken unit test

* Complete download PDF logic; code refactor; fix some merge conflict

* some cleanup

* fix a failed test

* cleanup some image

* remove some test data

* add resume tips

* add convert script

* some cleanup

* fix a typo

* fix some warnings

--- a/webapp/src/features/SmartResume/styles/ResumePreview.module.css
+++ b/webapp/src/features/SmartResume/styles/ResumePreview.module.css
@@ -197,35 +197,23 @@
   margin: 20px 0 20px -30px;
 }
 
-/* for printer  */
-@media print {
-  .container{
-    width: 100%;
-    background: white;
-    /* left: 0px;
-    top: 0px;
-    position:absolute; */
-    font-size: 14px;
-  }
-  .widgetContainer{
-    display: none;
-  }
+/* resume tips style  */
+.modalCloseButton{
+  width: 40px;
+  height: 40px;
+  position:absolute;
+  top: 10px;
+  right: 40px;
+  z-index: 1;
+  cursor:pointer;
+}
 
-  .pageContainer{
-    box-shadow: none;
-    width: 100%;
-    height: auto;
-    padding:30px 30px 40px;
-    max-width: none;
-    margin: 0;
-    font-size: 14px;
-  }
-
-  .pageBreaker {
-    page-break-before: always;
-    page-break-after: always;
-    height: initial;
-    box-shadow: none;
-    margin: 0;
-  }
+.modalCloseButton:hover .closeImg{
+  display: none;
+}
+.modalCloseButton .closeImgOnHover{
+  display: none;
+}
+.modalCloseButton:hover .closeImgOnHover{
+  display: block;
 }
