--- a/webapp/src/index.css
+++ b/webapp/src/index.css
@@ -29,3 +29,23 @@ code {
   width: 100%;
   height: 100%;
 }
+
+
+/* close icon style  */
+.closeIconContainer{
+  width: 40px;
+  height: 40px;
+  position:absolute;
+  z-index: 1;
+  cursor:pointer;
+}
+
+.closeIconContainer:hover .closeIcon{
+  display: none;
+}
+.closeIconContainer .closeIconHover{
+  display: none;
+}
+.closeIconContainer:hover .closeIconHover{
+  display: block;
+}
