TF-109 经历写作助手集成 + textarea 替换成富文本编辑器 (#117)
* TF-109 经历写作助手集成 + textarea 替换成富文本编辑器

* address change requests

--- a/webapp/src/features/SmartResume/styles/assistant.scss
+++ b/webapp/src/features/SmartResume/styles/assistant.scss
@@ -18,4 +18,11 @@
         }
       }
     }
+    .tips-container {
+        height: calc(100vh - 160px);
+        overflow-y: auto;
+    }
+    .tips-container::-webkit-scrollbar {
+        display: none;
+    }
 }
