--- a/webapp/src/features/SmartResume/styles/Assistant.module.css
+++ b/webapp/src/features/SmartResume/styles/Assistant.module.css
@@ -60,33 +60,29 @@
   position: relative;
 }
 
-.tipCard, .tipCardAnimation {
+.tipCard,
+.tipCardAnimation {
+  cursor: pointer;
   width: 320px;
-  height: 110px;
   border-radius: 4px;
   background-color: #f2f4f9;
-  padding: 0 20px;
+  padding: 20px;
   margin-bottom: 10px;
   position: relative;
   cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .tipIcon {
-  position: absolute;
-  width: 40px;
-  height: 70px;
-  margin: 40px 2px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .tipContent {
-  position: absolute;
-  top: 0;
-  left: 60px;
-  right: 20px;
-  bottom: 0;
-  margin: auto;
   width: 240px;
-  height: 70px;
   font-size: 14px;
   line-height: 1.5;
   color: #333333;
