--- a/webapp/src/features/SmartResume/styles/ResumePreview.module.css
+++ b/webapp/src/features/SmartResume/styles/ResumePreview.module.css
@@ -60,6 +60,8 @@
 .widgetContainer button.whiteBtn {
   background-color: white;
   color: #3e89ec;
+  display: flex;
+  align-items: center;
 }
 .widgetContainer button.whiteBtn:hover {
   color: #0069d9;
@@ -217,4 +219,30 @@
 }
 .modalCloseButton:hover .closeImgOnHover {
   display: block;
+}
+
+
+/* 编辑主题色styles  */
+.colorSquare,
+.colorCircle{
+  width: 1rem;
+  height: 1rem;
+  display: inline-block;
+  margin: 0 10px;
+  cursor:pointer;
+}
+.colorCircle{
+  border-radius: 0.5rem;
+}
+.colorPickercontainer{
+  position: absolute;
+  bottom: 100px;
+  left: 40px;
+  width: auto;
+  height: 50px;
+  border-radius: 8px;
+  padding: 1.25rem;
+  box-shadow: 0 12px 24px 0 rgba(0, 0, 0, 0.1);
+  background-color: #ffffff;
+  color: #333;
 }
