TF 简历预览格式调整 (#190)
* fix some bug for pdf download

* did some code cleanup

* remove some unused variables

* add template color change

* remove console.log

* testing library; base setup

* add a todo

* deal with merge conflict

* review update

* fix merge conflict

* update color name

* update color name

* Update resume preview feature

* adjust update to whole page feature

* merge master, fix conflict

* revert a bug

* move css

--- a/webapp/src/features/SmartResume/styles/index.scss
+++ b/webapp/src/features/SmartResume/styles/index.scss
@@ -234,4 +234,9 @@
     border-top: 26px solid transparent !important;
     border-right: 33px solid #3e89ec !important;
   }
+
+  /* resume preview style  */
+  .react-pdf__Page canvas{
+    margin:20px auto;
+  }
 }
