--- a/webapp/src/features/SmartResume/styles/ResumePreview.module.css
+++ b/webapp/src/features/SmartResume/styles/ResumePreview.module.css
@@ -191,10 +191,10 @@
   box-shadow: inset 0px 40px 0px rgba(0, 0, 0, 0.1), inset 0px 0px 0px white;
   margin: 20px 0 20px -30px;
 }
-.iframeWrapper {
+.previewWrapper {
   padding-bottom: 50px;
 }
-.iframeWrapper,
+.previewWrapper,
 .iframeStyle {
   width: 100%;
   height: 100%;
