UAT release - update master (#208)
* Add https for production

* TAIL-TBD production replica updates.

* TF 简历预览格式调整 (#190)

* fix some bug for pdf download

* did some code cleanup

* remove some unused variables

* add template color change

* remove console.log

* testing library; base setup

* add a todo

* deal with merge conflict

* review update

* fix merge conflict

* update color name

* update color name

* Update resume preview feature

* adjust update to whole page feature

* merge master, fix conflict

* revert a bug

* move css

* Tf 94 智能创建header部分 (#180)

* add resume header section

* add resume header layout

* connect with API

* update styleing, fix a bug

* code review update

Co-authored-by: Oscar Zhang <zsyoscar@gamil.com>

* lazy job get by uuid (avoid joining table to speed up) (#194)

- Change default get job by uuid to be lazy ( not getting child entities like keywords, major, location) so that joining with keyword/major/location table will be avoided for faster access
- Provided lazy as get parameter, default to true - if set to false then full job entity is returned as in old behavior(with child entities)

* [BE][Tail-183] job fetch more bug fix & small hack (#181)

* more bug fix

* location fix

* remove db name from migration script

* fix prod rabbit mq yaml bug

* bug - fix date picker issues

* fix: project from validation fix

* bug - fix date picker issues (#198)

Co-authored-by: xelody <melodypxin@gmail.com>

* infra - add in AWS/GCP keys to webapp (#197)

Co-authored-by: xelody <melodypxin@gmail.com>

* fix: validation fix

* fix: 经历写作助手弹窗无内容 + 弹窗在longpage底部显示 (#199)

Co-authored-by: Joseph Jin <joseph@skyglobal.com>

* fix: update test files

* [BE] resume-svc: allow null for end dates (#206)

* fix: remove un-used-vars

* fix: PR revision

* 修复简历没有preview的时候 点击一键整页 会崩溃  (#202)

* fix a adjusttowholepage bug

* fix a typo

* F

--- a/webapp/src/index.css
+++ b/webapp/src/index.css
@@ -49,3 +49,15 @@ code {
 .closeIconContainer:hover .closeIconHover{
   display: block;
 }
+
+/* react bootstrap progress bar style  */
+.bg-score_A{
+  background-color: #2abc6e!important;
+}
+.bg-score_B,
+.bg-score_C{
+  background-color: #edbc4d!important;
+}
+.bg-score_D{
+  background-color: #ff6565!important;
+}
