--- a/webapp/src/features/SmartResume/styles/ResumePreview.module.css
+++ b/webapp/src/features/SmartResume/styles/ResumePreview.module.css
@@ -7,10 +7,9 @@
   background: #f0f0f0;
   position: relative;
   font-size: 14px;
-  z-index: -1;
 }
 
-/* Hide Scrollbars But Keep Functionality */
+/* Hide scrollbar But Keep Functionality */
 /* Hide scrollbar for Chrome, Safari and Opera */
 .container::-webkit-scrollbar {
   display: none;
@@ -234,7 +233,7 @@
 .colorCircle{
   border-radius: 0.5rem;
 }
-.colorPickercontainer{
+.colorPickerContainer{
   position: absolute;
   bottom: 100px;
   left: 40px;
