--- a/webapp/src/features/SmartResume/styles/index.scss
+++ b/webapp/src/features/SmartResume/styles/index.scss
@@ -240,3 +240,11 @@
     margin:20px auto;
   }
 }
+.App {
+    nav.navbar {
+        display: none;
+    }
+    .features.smart-resume {
+        padding-top: 0;
+    }
+}
