--- a/webapp/src/features/SmartResume/components/ProgressHeader/ProgressHeader.module.css
+++ b/webapp/src/features/SmartResume/components/ProgressHeader/ProgressHeader.module.css
@@ -4,7 +4,13 @@
   -webkit-box-shadow:0px 1px 0px #bfc4d3;
   -moz-box-shadow:0px 1px 0px #bfc4d3;
   box-shadow:0px 1px 0px #bfc4d3;
-
+  position: sticky;
+  width: calc(100% + 4px);
+  top: 0;
+  margin-left: -2px;
+  z-index: 1;
+  background: #fff;
+  border: 2px solid #fff;
 }
 .container > div{
   padding:5px 20px;
