--- a/mail-svc/src/main/resources/templates/forget-password-email-template.html
+++ b/mail-svc/src/main/resources/templates/forget-password-email-template.html
@@ -95,7 +95,7 @@
   <tr>
     <td style="font-family: sans-serif; font-size: 14px; vertical-align: top;">&nbsp;</td>
     <td class="container"
-      style="font-family: sans-serif; font-size: 14px; vertical-align: top; display: block; margin: 0 auto; max-width: 1080px; padding: 10px;">
+      style="font-family: sans-serif; font-size: 14px; vertical-align: top; display: block; margin: 0 auto; max-width: 1080px; padding: 10px; width: 1080px;">
       <div class="content"
         style="box-sizing: border-box; display: block; margin: 0 auto; max-width: 1080px; padding: 10px;">
 
@@ -111,21 +111,20 @@
                 style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;">
                 <tr>
                   <td style="font-family: sans-serif; font-size: 14px; vertical-align: top;">
-                    <img src="https://kuaidao-img.s3.ca-central-1.amazonaws.com/logo.png" width="150" alt="logo"/>
                     <p
-                      style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px; font-weight:bold; border-bottom:#3e89ec solid 6px; padding-bottom: 15px;">
-                    </p>
+                      style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; padding: 15px 0; margin-bottom: 15px; font-weight:bold; border-bottom:#3e89ec solid 6px; padding-bottom: 15px;">
+                      ~TODO~ logo here</p>
                       <!-- TODO: need cdn logo, blocked by TF-129 -->
                     <p
                       style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px; font-weight:bold;">
-                      <span th:text="${name}">你好,</p>
+                      ~TODO~ 你好,</p>
                     <p
                       style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
-                      欢迎您注册 “快刀简历” 。请点按下方链接， 完成账号激活。</p>
+                      您最近提出了重设 “快刀简历” 密码的请求。要完成此过程，请点按下方链接。</p>
                     
                     <p
                       style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-top: 50px; margin-bottom: 15px;">
-                      <a th:href="${link}" class="apple-link" style="color:#3e89ec; font-weight:bold;">激活账号&gt;</a></p>
+                      <a href="~TODO~" class="apple-link" style="color:#3e89ec; font-weight:bold;">立即重设&gt;</a></p>
                     <p
                       style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-top: 50px; margin-bottom: 15px;">
                       此致</p>
