feat - feat - redirect to login which will redirect to app after sign up (#232)

--- a/onboarding-app/src/main/resources/templates/pages/complete.html
+++ b/onboarding-app/src/main/resources/templates/pages/complete.html
@@ -69,7 +69,7 @@
         <div class="app-body">
           <img th:src="@{/img/done.gif}" width=320 alt="completion illustration" />
           <p>注册成功</p>
-          <a class="btn btn-primary" href="#" role="button">
+          <a class="btn btn-primary" href="/login" role="button">
             开始创建您的第一份简历
           </a>
         </div>
