--- a/webapp/src/features/SmartResume/styles/ExperiencesForm.module.css
+++ b/webapp/src/features/SmartResume/styles/ExperiencesForm.module.css
@@ -5,6 +5,12 @@
   margin: 0 240px 0 200px;
   position: relative;
 }
+.resumeName {
+  margin: 60px 0;
+  font-size: 30px;
+  font-weight: bold;
+  color: #333333;
+}
 
 @media print {
   .container{
