[FE][TF-125] 重置密码页面 (#240)
* 重置密码页面跟前后集成

* 重置密码邮件发送

--- a/mail-svc/src/main/resources/templates/forget-password-email-template.html
+++ b/mail-svc/src/main/resources/templates/forget-password-email-template.html
@@ -4,7 +4,7 @@
 <head>
   <meta name="viewport" content="width=device-width">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>Welcome to Kuaidao Resume</title>
+  <title>Welcome to Smart Resume</title>
   <style>
     /* -------------------------------------
         INLINED WITH htmlemail.io/inline
@@ -111,20 +111,20 @@
                 style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;">
                 <tr>
                   <td style="font-family: sans-serif; font-size: 14px; vertical-align: top;">
+                    <img src="https://kuaidao-img.s3.ca-central-1.amazonaws.com/logo.png" width="150" alt="logo"/>
                     <p
                       style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; padding: 15px 0; margin-bottom: 15px; font-weight:bold; border-bottom:#3e89ec solid 6px; padding-bottom: 15px;">
-                      ~TODO~ logo here</p>
-                      <!-- TODO: need cdn logo, blocked by TF-129 -->
+                    </p>
                     <p
                       style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px; font-weight:bold;">
-                      ~TODO~ 你好,</p>
+                      你好,</p>
                     <p
                       style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
                       您最近提出了重设 “快刀简历” 密码的请求。要完成此过程，请点按下方链接。</p>
                     
                     <p
                       style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-top: 50px; margin-bottom: 15px;">
-                      <a href="~TODO~" class="apple-link" style="color:#3e89ec; font-weight:bold;">立即重设&gt;</a></p>
+                      <a th:href="${link}" class="apple-link" style="color:#3e89ec; font-weight:bold;">立即重设&gt;</a></p>
                     <p
                       style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-top: 50px; margin-bottom: 15px;">
                       此致</p>
