--- a/onboarding-app/src/main/resources/templates/pages/confirmreset.html
+++ b/onboarding-app/src/main/resources/templates/pages/confirmreset.html
@@ -6,9 +6,71 @@
       with:includeScripts="true"
 >
 <head>
-  <meta charset="UTF-8">
-  <title>TBD TF-125 Follow steps to reset your Kuaidaoresume password.</title>
+    <meta charset="UTF-8">
+    <title>Follow steps to reset your SmartResume password.</title>
+    <script th:inline="javascript">     
+      var check = function() {
+          if (document.getElementById('password_input').value ===
+              document.getElementById('confirm_password_input').value) {
+              document.getElementById('password_warning_message').style.display = "none";
+              document.getElementById('confirm_password_warning_message').style.display = "none";
+              document.getElementById("password_input").style.borderColor = "";
+              document.getElementById("confirm_password_input").style.borderColor = "";
+          } else {
+              document.getElementById('password_warning_message').style.display = "block";
+              document.getElementById('confirm_password_warning_message').style.display = "block";
+              document.getElementById("password_input").style.borderColor = "#edbc4d";
+              document.getElementById("confirm_password_input").style.borderColor = "#edbc4d";
+          }
+      }
+  </script>
 </head>
-<body>
-</body>
+<th:block layout:fragment="content">
+        <div class="content-body">
+            <p class="title">
+                密码重置
+            </p>
+            <p style="font-family: MicrosoftYaHei;size: 14px;float: left;line-height: 30px; color: #333333;line-height: 30px;"> 
+              密码需要至少6位。需要包涵一个大写字母。
+            </p>
+            <form th:action="@{/reset/__${page.token}__}" th:method="post">
+                <div class="form-content">
+                  <div class="form-group">
+                    <label for="login-email" style="float:left">输入新密码</label>
+                    <div class="warning-message" id="password_warning_message" style="display:none;float:right;">
+                      <p>密码不一样，请重试</p>
+                    </div>
+                    <input
+                      name="password"
+                      type="password"
+                      class="form-control"
+                      id="password_input"
+                      pattern="(?=.*[A-Z]).{6,}" 
+                      autofocus
+                      oninput="this.setCustomValidity(this.validity.patternMismatch ? '密码需要至少6位。需要包涵一个大写字母。' : '')"
+                      onkeyup="this.reportValidity();check()"                      
+                    />
+                  </div>
+                  <div class="form-group">
+                    <label for="login-password">确认密码</label>
+                    <div class="warning-message" id="confirm_password_warning_message" style="display:none;float:right;">
+                      <p>密码不一样，请重试</p>
+                    </div>
+                    <input
+                      name="confirm_password"
+                      type="password"
+                      class="form-control"
+                      id="confirm_password_input"
+                      onkeyup="check()"
+                    />
+                  </div>
+                </div>
+                <div class="button-group">
+                  <button type="submit" class="btn btn-primary">
+                    确认
+                  </button>
+                </div>
+              </form>
+        </div>
+    </th:block>
 </html>
