[TF-187] Add Google recaptcha UI. (#246)
Co-authored-by: sliu <sliu@shuangsuangsmbp.lan>

--- a/onboarding-app/src/main/resources/templates/error.html
+++ b/onboarding-app/src/main/resources/templates/error.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>TBD TF-125</title>
+    <title>TBD TF-125 Error Page</title>
 </head>
 <body>
 
