--- a/webapp/src/features/SmartResume/components/ProgressHeader/ProgressHeader.module.css
+++ b/webapp/src/features/SmartResume/components/ProgressHeader/ProgressHeader.module.css
@@ -48,3 +48,12 @@ p{
 .progressBar{
   height: 7px;
 }
+
+@media only screen and (max-width: 1440px) {
+  .hideSM{
+    /* display: none; */
+  }
+  .progress{
+    margin-bottom:10px;
+  }
+}
