--- a/webapp/src/features/SmartResume/styles/ExperiencesForm.module.css
+++ b/webapp/src/features/SmartResume/styles/ExperiencesForm.module.css
@@ -11,3 +11,11 @@
     display: none;
   }
 }
+
+@media only screen and (max-width: 1440px) {
+  .container {
+    width: 650px;
+    margin: 0 10px 0 120px;
+    font-size:0.8em;
+  }
+}
