--- a/webapp/src/features/SmartResume/styles/LeftNav.module.css
+++ b/webapp/src/features/SmartResume/styles/LeftNav.module.css
@@ -36,3 +36,12 @@
     display:none;
   }
 }
+
+@media only screen and (max-width: 1440px) {
+  .container {
+    width: 100px;
+  }
+  .content {
+    margin: 80px 0 0 0px
+  }
+}
