--- a/webapp/src/features/SmartResume/styles/ResumePreview.module.css
+++ b/webapp/src/features/SmartResume/styles/ResumePreview.module.css
@@ -234,14 +234,28 @@
   border-radius: 0.5rem;
 }
 .colorPickerContainer{
-  position: absolute;
+  position: sticky;
   bottom: 100px;
   left: 40px;
-  width: auto;
+  width: 200px;
   height: 50px;
   border-radius: 8px;
   padding: 1.25rem;
   box-shadow: 0 12px 24px 0 rgba(0, 0, 0, 0.1);
   background-color: #ffffff;
   color: #333;
+}
+
+@media only screen and (max-width: 1440px) {
+  .container {
+    float: right;
+    width: calc(100% - 800px);
+  }
+  .widgetContainer {
+    width: calc(100% - 800px);
+  }
+  .colorPickerContainer{
+    position: sticky;
+    bottom: 10px;
+  }
 }
