--- a/webapp/src/features/SmartResume/styles/ResumeTips.module.css
+++ b/webapp/src/features/SmartResume/styles/ResumeTips.module.css
@@ -1,7 +1,7 @@
 .container{
-  position: absolute;
+  position: sticky;
+  left: 1000px;
   bottom: 100px;
-  right: 40px;
   width: 360px;
   height: 740px;
   border-radius: 8px;
@@ -10,6 +10,7 @@
   background-color: #ffffff;
   color: #333;
   overflow: auto;
+  max-height: 70%;
 }
 .header{
   font-size: 24px;
@@ -38,7 +39,7 @@
 .cardHader{
   background:white;
   border:none;
-  padding: 1.25rem 0;
+  padding: 0.75rem 0;
 }
 .cardHader button{
   font-size: 16px;
@@ -63,4 +64,10 @@
   background-color: #f2f4f9;
   font-size: 14px;
   position:relative;
+}
+
+@media only screen and (max-width: 1440px) {
+  .container{
+    bottom: 20px;
+  }
 }
