TF-115 微信注册+登入 (#249)
* feat - add wechat login - initial setup

* feat - wechat - add in error handling

* unfinished wechat work

* feat - wechat finish and cleanup

* clean up

Co-authored-by: xelody <melodypxin@gmail.com>

--- a/onboarding-app/src/main/resources/templates/pages/login.html
+++ b/onboarding-app/src/main/resources/templates/pages/login.html
@@ -5,6 +5,7 @@
       layout:decorate="~{layout}"
       with:includeScripts="true"
 >
+<div id="login_container"></div>
 <th:block layout:fragment="content">
   <div class="content-body desktop">
     <p class="title">
@@ -45,10 +46,11 @@
         <button type="submit" class="btn btn-primary float-left">
           登入
         </button>
-        <button type="submit" class="btn btn-success float-right">
+        <a class="btn btn-success float-right" target="_blank"
+           th:href="@{__${page.wechatLoginUrl}__}">
           <img th:src="@{img/wechat_white.svg}" alt="WeChat logo" />
           微信登入
-        </button>
+        </a>
       </div>
     </form>
     <p class="label">我还没有账号 <a th:href="@{/sign-up}" href="signup.html">点击注册</a></p>
